--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe Rescue</title>
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1077719502441164860/1078469895525769307/bang.png">
   </head>
   <body>
     <div id="root"></div>
